--- a/GeoJsonToSTL.html
+++ b/GeoJsonToSTL.html
@@ -116,7 +116,7 @@ or on github at <a href="https://github.com/seam345/GeoJsonToSTL">GeoJsonToSTL</
         // console.log(geoJSON['features']);
 
 
-        let output = 'Please select a variable to use an height below: <br/>';
+        let output = 'Please select a variable to use as height below: <br/>';
         for (let key in  geoJSON['features'][0]['properties'])
         {
           // skip loop if the property is from prototype
