--- a/GeoJsonToSTL.html
+++ b/GeoJsonToSTL.html
@@ -43,6 +43,11 @@ or on github at <a href="https://github.com/seam345/GeoJsonToSTL">GeoJsonToSTL</
 <p id="list"></p>
 <p id="listGroup"></p>
 
+
+<p id="percentTitle" style="white-space: pre;"></p>
+<div style="width: 100%; height: 5px; background-color: black">
+  <div id="percentComplete" style="background-color: green; width: 0; height: 5px"></div>
+</div>
 <button onclick="myFunction()">Generate STL</button>
 <script src="https://unpkg.com/jszip@3.2.1/dist/jszip.min.js"></script>
 <script src="https://unpkg.com/file-saver@2.0.2/dist/FileSaver.min.js"></script>
@@ -51,6 +56,8 @@ or on github at <a href="https://github.com/seam345/GeoJsonToSTL">GeoJsonToSTL</
   let geoJSON   = null;
   let heightkey = null;
   let groupKey  = null;
+  let groupValues = false;
+  let doNotGroupKey = "MyUnlikelyValueToBeAVeriableNameInSomoneElsesGeoJSON";
 
   let toleranceSlider = document.getElementById('toleranceRange');
   console.log(toleranceSlider);
@@ -135,7 +142,7 @@ or on github at <a href="https://github.com/seam345/GeoJsonToSTL">GeoJsonToSTL</
         }
 
 
-        let output2 = 'Please select a variable to group object by below: <br/>';
+        let output2 = 'Please select a variable to group object by below, or select the no group option at the bottom: <br/>';
         for (let key in  geoJSON['features'][0]['properties'])
         {
           // skip loop if the property is from prototype
@@ -144,6 +151,7 @@ or on github at <a href="https://github.com/seam345/GeoJsonToSTL">GeoJsonToSTL</
           output2 += '<input type="radio" name="group" value="' + key + '"> ' + key + '<br/>';
 
         }
+          output2 += '<input type="radio" name="group" value="'+doNotGroupKey+'">No Grouping<br/>';
         // console.log(output);
         document.getElementById('listGroup').innerHTML = output2;
         let groupRadio                                 = document.getElementsByName('group');
@@ -159,6 +167,7 @@ or on github at <a href="https://github.com/seam345/GeoJsonToSTL">GeoJsonToSTL</
   function handleGroupSelect()
   {
     groupKey = this.value;
+    groupValues = this.value !== doNotGroupKey;
   }
 
   function handleHeightSelect()
@@ -173,22 +182,27 @@ or on github at <a href="https://github.com/seam345/GeoJsonToSTL">GeoJsonToSTL</
   {
     let stlFolders = {};
 
-
-    // Create a new key for every unique folder I am going to make
-    for (let i = 0; i < geoJSON['features'].length; i++)
-    {
-      if ( !( geoJSON['features'][i]['properties'][groupKey] in stlFolders ) )
-      // if ( !( geoJSON['features'][j]['properties']['winning_party'] in stlFolders ) )
-      {
-        stlFolders[geoJSON['features'][i]['properties'][groupKey]] = [];
+    if (groupValues) {
+      // Create a new key for every unique folder I am going to make
+      for (let i = 0; i < geoJSON['features'].length; i++) {
+        if (!(geoJSON['features'][i]['properties'][groupKey] in stlFolders))
+        // if ( !( geoJSON['features'][j]['properties']['winning_party'] in stlFolders ) )
+        {
+          stlFolders[geoJSON['features'][i]['properties'][groupKey]] = [];
+        }
       }
+    }else
+    {
+      stlFolders['STLs'] = [];
     }
 
-
+    document.getElementById('percentTitle').innerHTML         = "Converting GeoJson to STL";
     let stl = [];
     for (let j = 0; j < geoJSON['features'].length; j++)
     {
       console.log('Start shape: %d', j);
+      let percent = (j/ geoJSON['features'].length) * 100;
+      document.getElementById('percentComplete').width = percent + '%';
       let newStl        = 'solid shape' + j + '\n';
       // let xShapeOrigin  = ( j % 10 ) * 50;
       let xShapeOrigin  = 0;
@@ -238,11 +252,17 @@ or on github at <a href="https://github.com/seam345/GeoJsonToSTL">GeoJsonToSTL</
       // console.log(newStl);
       stl.push(newStl);
 
-      stlFolders[geoJSON['features'][j]['properties'][groupKey]].push(newStl);
+      if (groupValues)
+      {
+        stlFolders[geoJSON['features'][j]['properties'][groupKey]].push(newStl);
+      }else
+      {
+        stlFolders['STLs'].push(newStl);
+      }
 
 
     }
-
+    console.log("zipping files to save");
     const zip = new JSZip();
 
     for (let folderName in stlFolders)
@@ -254,8 +274,13 @@ or on github at <a href="https://github.com/seam345/GeoJsonToSTL">GeoJsonToSTL</
       }
     }
 
-
-    zip.generateAsync({type: "blob"})
+    console.log("generating save blob");
+    document.getElementById('percentTitle').innerHTML         = "Converting GeoJson to STL: Done\nGenerating save file";
+    zip.generateAsync({type: "blob"}, function updateCallback(metadata) {
+      // console.log("generate percent " + metadata.percent + "%");
+      document.getElementById('percentTitle').innerHTML         = "Converting GeoJson to STL: Done\nGenerating save file: "+ metadata.percent + '%';
+      document.getElementById('percentComplete').style.width = metadata.percent + '%';
+    })
         .then(function (blob)
         {
           saveAs(blob, "shapes.zip");
